src/global/_styles.scss
$font-family: 'Roboto', sans-serrif;
$background-color: #f1f5f8;

// Colors
$primary: #ef8c20;
$secondary: #121b3c;
$gray: #b2b4bd;
$gray2: #8e8e8e; // use in placeholders
$gray3: #8a8a8a; // use in parent title of cards
$lightgray: #e6e9eb;
$lightgray2: #656a7c; // use in meta
$lightgray3: #9d9d9d;
$darkgray1: #333333; // use in headers
$darkgray2: #3a3a3a; // use in subheader / light headers
$white: #fff;
$offwhite: #f1f5f8;
$blue: #557ce0; // use in media links
$darkblue: #0a122d;
$darkorange: #ef5f20;
$red: #e50e56; //use in refute hypothesis
$lightgreen: #a6d120;
// use in contribution heirarchy - in order QHED-AAA
$yellow: #f2ba1d;
$orange: #ec8a21;
$green: #12b255;
$indigo: #3476d6;
$purple: #724586;

$avatar-colors: $yellow, $orange, $green, $indigo, $purple,
  $darkorange, $primary;

$theme-colors: (
  'primary': $primary,
  'secondary': $secondary,
  'gray': $gray,
  'white': $white,
  'lightgray': $lightgray
);

$spacers: (
  10: 10px,
  12: 12px,
  15: 15px,
  20: 20px,
  25: 25px,
  30: 30px,
  35: 35px,
  40: 40px
);

@mixin for-tablet-and-less {
  @media screen and (max-width: 900px) {
    @content;
  }
}

/** Helper Classes **/
.padding {
  &-40 {
    padding: 40px;
  }

  &-lr25 {
    padding: 0 25px !important;
  }

  &-lr65 {
    padding: 0 65px !important;
  }
}

.ml {
  &-15 {
    margin-left: 15px;
  }
  &-10 {
    margin-left: 10px !important;
  }
}

.mt {
  &-10 {
    margin-top: 10px;
  }
  &-65 {
    margin-top: 65px;
  }
}

.mb {
  &-10 {
    margin-bottom: 10px !important;
  }
  &-15 {
    margin-bottom: 15px !important;
  }
  &-20 {
    margin-bottom: 20px !important;
  }
  &-40 {
    margin-bottom: 40px !important;
  }
  &-65 {
    margin-bottom: 65px !important;
  }

  &-15m {
    @media screen and (max-width: 959px) {
      margin-bottom: 15px !important;
    }
  }

}

.mr {
  &-30 {
    margin-right: 30px !important;
  }
}

// aligns element inside class
.align {
  &-center {
    * {
      margin-left: auto;
      margin-right: auto;
    }
  }
}

/** MUI Component Overrides **/

// Typograhy

.MuiTypography-root {
  color: $darkgray1;

  &.MuiTypography-h1 {
    font-family: 'Roboto-Bold';
    font-size: 24px;
    letter-spacing: 0.75px;
    line-height: 28px;
  }
  &.MuiTypography-h2 {
    font-family: 'Roboto';
    font-size: 20px;
    letter-spacing: 0.4px;
    line-height: 24px;
  }
  &.MuiTypography-h3 {
    font-family: 'Roboto';
    font-size: 20px;
    letter-spacing: 0.13px;
    line-height: 24px;
    color: $darkgray2;
  }
  &.MuiTypography-h4 {
    font-family: 'Roboto-Medium';
    font-size: 18px;
    letter-spacing: 0.11px;
    line-height: 21px;
    color: $darkgray2;
  }
  &.MuiTypography-h5 {
    font-family: 'Roboto-Medium';
    font-size: 14px;
    letter-spacing: 0.44px;
    line-height: 16px;
    text-transform: uppercase;
  }
  &.MuiTypography-body1 {
    font-family: 'Roboto';
    font-size: 16px;
    letter-spacing: 0.1px;
    line-height: 24px;
  }
  &.MuiTypography-body2 {
    font-family: 'Roboto';
    font-size: 16px;
    letter-spacing: 0.1px;
    line-height: 24px;
    color: $gray2;
  }
}

// Divider

hr.MuiDivider-root {
  margin: 30px 0;
}

.cardBody {
  *, 
  img {
    max-width: 100%;
  }
  h1 {
    font-family: 'Roboto-Bold';
    font-size: 24px;
    letter-spacing: 0.75px;
    line-height: 28px;
  }
  h2 {
    font-family: 'Roboto';
    font-size: 20px;
    letter-spacing: 0.4px;
    line-height: 24px;
  }
  p,
  * {
    font-family: 'Roboto';
    font-size: 16px;
    letter-spacing: 0.1px;
    line-height: 24px;
  }

  span.showMore {
    font-family: 'Roboto';
    font-size: 14px;
    letter-spacing: 0.09px;
    line-height: 16px;
    color: $primary;
  }
}

.cardBody.preview {
  img {
    display: none;
  }
  p,
  h1,
  h2,
  * {
    font-family: 'Roboto' !important;
    font-size: 16px;
    letter-spacing: 0.1px;
    line-height: 24px;
    font-weight: normal;
  }
}

// Accordion
.MuiAccordion-root {
  .MuiAccordionSummary-root {
    .MuiAccordionSummary-content {
      margin: 0;
      padding: 0;

      &.Mui-expanded {
        margin: 0;
      }
    }

    .MuiAccordionSummary-expandIcon {
      padding: 0;
      margin: 0;
    }
  }
}

// Forms

.inputWrapper {
  .label {
    color: $darkgray1;
    font-family: 'Roboto-Medium';
    font-size: 16px;
    font-weight: 500;
    letter-spacing: 0.1px;
    line-height: 19px;

    .required {
      color: $red;
      font-weight: bold;
    }
  }

  .input {
    width: 100%;
    margin-top: 10px;
    
    .MuiInputBase-root {
      border-radius: 8px !important;
      // background: $white;

      .MuiInputBase-input {
        border: 1px solid rgba(178,180,189,0.5);
        box-shadow: none;
        font-size: 16px;
        letter-spacing: 0.1px;
        line-height: 19px;
        border-radius: 8px;
        background: $white;
        max-height: 45px;
        padding: 12px 17px;
      }

      .MuiOutlinedInput-notchedOutline {
        border: none;
      }
    }
  }

  .quill.input {
    background: $white;
    border-radius: 8px;
    .ql-toolbar.ql-snow {
      border-top-left-radius: 8px;
      border-top-right-radius: 8px;
    }
    .ql-container.ql-snow {
      min-height: 200px;
      border-bottom-left-radius: 8px;
      border-bottom-right-radius: 8px;
    }
  }
}

.multiSelectWrapper {
  .label {
    color: $darkgray1;
    font-family: 'Roboto-Medium';
    font-size: 16px;
    font-weight: 500;
    letter-spacing: 0.1px;
    line-height: 19px;

    .required {
      color: $red;
      font-weight: bold;
    }
  }

  .input {
    width: 100%;
    margin-top: 10px;
    
    .MuiInputBase-root {
      border-radius: 8px !important;
      padding: 5px 17px !important;
      border: 1px solid rgba(178,180,189,0.5);
      box-shadow: none;
      background: $white;
      min-height: 45px;
      max-height: 45px;

      .MuiInputBase-input {
        border: none;
        box-shadow: none;
        font-size: 16px;
        letter-spacing: 0.1px;
        line-height: 19px;
        padding: 0 !important;
        padding-left: 8px !important;
      }

      .MuiOutlinedInput-notchedOutline {
        border: none;
      }

      .MuiChip-root {
        background: $primary;
        color: $white;
        font-size: 14px;
        letter-spacing: 0.09px;
        line-height: 16px;
        height: 30px;

        // temp: replace with x icon
        .MuiSvgIcon-root {
          fill: $white;
        }
      }
    }
  }
}

.inputCard {
  padding: 11px 17px;
  border-radius: 8px !important;
  border: 1px solid rgba(178,180,189,0.5) !important;
  min-height: 45px;
  max-height: 45px;

  .MuiCardContent-root {
    padding: 0 !important;

    p.inputContent {
      font-size: 16px;
      letter-spacing: 0.1px;
      line-height: 24px;
      color: $darkgray2;
    }
  }
}

.radioWrapper {
  .label {
    color: $darkgray1;
    font-family: 'Roboto-Medium';
    font-size: 16px;
    font-weight: 500;
    letter-spacing: 0.1px;
    line-height: 19px;
    margin-bottom: 17px;

    .required {
      color: $red;
      font-weight: bold;
    }
  }

  .radio {
    box-sizing: border-box;
    height: 25px;
    border: 1px solid $gray;
    opacity: 0.5;
    border-radius: 12.5px;
    padding: 0 15px;
    margin-right: 20px;

    span.MuiTypography-root {
      font-family: 'Roboto-Medium';
      font-size: 14px;
      letter-spacing: 0.11px;
      line-height: 21px;
      color: $darkgray2;
      text-transform: uppercase;
    }

    &.active {
      opacity: 1;
    }

    &.supports {
      border: 1px solid $green;
      span.MuiTypography-root {
        color: $green;
      }
    }
    &.refutes {
      border: 1px solid $red;
      span.MuiTypography-root {
        color: $red;
      }
    }
  }
}

// Contribution Colors

// @temp: move when data is available
span {
  &.question {
    color: $yellow;
  }
  &.hypothesis {
    color: $orange;
  }
  &.experiment {
    color: $green;
  }
  &.data {
    color: $indigo;
  }
  &.analysis {
    color: $purple;
  }
}

// Loader 

.loaderWrapper {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  background: #E2E2E4;
}

// Buttons target root mui classes later @k
button.btn {
  box-sizing: border-box;
  height: 45px;
  border-radius: 27px;
  box-shadow: none !important;

  span {
    font-family: 'Roboto-Medium';
  }

  &.submitBtn {
    min-width: 187px;
  }

  // used in new questio btn etc.
  &.primary {
    border-radius: 25px;
    background-color: $primary;
    font-size: 14px;
    letter-spacing: 0.44px;
    line-height: 16px;
    padding: 0 20px;
    color: $white;
    font-family: 'Roboto-Bold';

    .MuiButton-label svg {
      margin-right: 8px;
    }
  }

  &.secondary {
    border-radius: 25px;
    background-color: transparent;
    border: 1px solid $primary;
    font-size: 14px;
    letter-spacing: 0.44px;
    line-height: 16px;
    padding: 0 20px;
    color: $primary;
    font-family: 'Roboto-Bold';

    .MuiButton-label svg {
      margin-right: 8px;
    }

    &.Mui-disabled {
      opacity: 0.6;
      cursor: not-allowed;
    }
  }

  // used in add related media
  &.dashed {
    border: 1px dashed $primary;
    background: transparent;
    font-size: 14px;
    font-weight: 500;
    letter-spacing: 0.09px;
    color: $primary;
    padding: 0 45px;
    box-shadow: none;
  }


  // used in modal/dialog
  &.contained {
    border-radius: 25px;
    background-color: $primary;
    font-size: 14px;
    letter-spacing: 0.44px;
    line-height: 16px;
    padding: 0 60px;
    color: $white;
  }

  // used in modal/dialog
  &.outline {
    border-radius: 25px;
    background-color: transparent;
    border: 1px solid $primary;
    font-size: 14px;
    letter-spacing: 0.44px;
    line-height: 16px;
    padding: 0 60px;
    color: $primary;
  }

  &.delete {
    border-radius: 25px;
    background-color: transparent;
    border: 1px solid $red;
    font-size: 14px;
    letter-spacing: 0.44px;
    line-height: 16px;
    padding: 0 20px;
    color: $red;
    font-family: 'Roboto-Bold';

    .MuiButton-label svg {
      margin-right: 8px;
    }
  }
}

// dialog 
div.dialog {
  min-height: 250px;
  width: 480px;
  border-radius: 8px;
  background-color: $white;
  box-shadow: 0 2px 30px 0 rgba(0,0,0,0.15);
  padding: 40px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);

  &.centered {
    text-align: center;
  }

  .dialogTitle {
    font-family: "Roboto-Bold";
    font-size: 20px;
    font-weight: bold;
    letter-spacing: 0.63px;
    line-height: 24px;
    &.delete {
      color: $red;
    }
  }

  .dialogContent {
    margin-top: 25px;
    margin-bottom: 40px;
  }
}

.MuiBackdrop-root {
  background-color: rgba(0, 0, 0, 0.3);
}

.ql-container.ql-snow {
  height: 100px;
}

.search-term {
  color: $primary;
  font-family: 'Roboto-Medium';
}

// slick 
ul.slick-dots {
  text-align: left;
  bottom: -80px;

  li {
    height: 8px;
    width: 8px;
    opacity: 0.5;
    background-color: $white;
    border-radius: 50%;

    &.slick-active {
      background-color: $primary;
      opacity: 1;
    }
  }
}

button.slick-arrow.slick-prev {
  right: 35px;
  bottom: -100px;
  top: unset;
  left: unset;
  width: 30px;
  height: 30px;
  z-index: 999;

  &::before {
    background-image: url('../assets/images/login/left-slider.png');
    background-size: 100% 100%;
    background-repeat: no-repeat;
    width: 30px;
    height: 30px;
    content: '';
    display: block;
  }
}

button.slick-arrow.slick-next {
  right: 0px;
  bottom: -100px;
  top: unset;
  left: unset;
  width: 30px;
  height: 30px;
  z-index: 999;

  &::before {
    background-image: url('../assets/images/login/right-slider.png');
    background-size: 100% 100%;
    background-repeat: no-repeat;
    width: 30px;
    height: 30px;
    content: '';
    display: block;
  }
}

